# wazuh

.github/workflows/: packages-build-manager.yml
etc/templates/config/generic/: sca.manager.files
src/engine/docs/: README.md  keyword_table.md
src/engine/source/builder/src/builders/opfilter/: opBuilderHelperFilter.cpp
src/engine/source/indexerconnector/test/component/: indexerConnector_test.cpp
src/engine/test/helper_tests/helpers_description/filter/: array_contains.yml  array_not_contains.yml  array_not_contains_any.yml
src/syscheckd/src/ebpf/: CMakeLists.txt
src/unit_tests/wazuh_modules/ms_graph/: test_wm_ms_graph.c
